secondfile/objects/DHStatus_Test_Point_Result_List__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
    <fields>
        <fullName>Command_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>Command Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Command_Summary__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>Command Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Ethernet_Check_Parameters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List-DHStatus-Ethernet Check Parameters</description>
        <label>DHStatus-Ethernet Check Parameters</label>
        <referenceTo>DHStatus_Ethernet_Check_Parameters__c</referenceTo>
        <relationshipLabel>DHStatus-Test Point Result List</relationshipLabel>
        <relationshipName>DHStatus_Test_Point_Result_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Device__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>From Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Router_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>L2 Router Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Reason__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>Test Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>Test Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Device__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Ethernet Check Parameters-Test Point Result List</description>
        <label>To Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Test Point Result List</label>
    <nameField>
        <displayFormat>TPR-{0000}</displayFormat>
        <label>DHStatus-Test Point Result List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Test Point Result List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>